Theme page done

--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
     <title> Profile</title>
     <link rel="stylesheet" href="css/profile_style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="icon" href="t.png" sizes="32x32" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
