--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		   			 <div class="collapse navbar-collapse" id="myNavbar">
 		     		   <ul class="nav navbar-nav">
 					        <li class="active"><a href="">Home</a></li>
-				            <li><a href="about.html">ABOUT US</a></li>
+				            <li><a href="theme.html">Theme</a></li>
 				            <li><a href="contact.html">CONTACT US</a></li>
 				            <li><a href="legend.html">THE LEGEND OF SEABISCUIT</a></li>
 				         </ul>
