Theme page modified

--- a/theme.html
+++ b/theme.html
@@ -62,7 +62,7 @@
              
              <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav">
-                  <li ><a href="">Home</a></li>
+                  <li ><a href="index.html">Home</a></li>
                     <li  class="active"><a href="theme.html">Theme</a></li>
                     <li><a href="contact.html">CONTACT US</a></li>
                     <li><a href="legend.html">THE LEGEND OF SEABISCUIT</a></li>
@@ -84,7 +84,7 @@
           </div>
       </nav>
       </header>
-      <div id="content"  style="background-color: #fed16a" >
+      <div id="content"   >
       
       	                                   <h1>Promoters </h1>
 All the promoters of Seabiscuit are highly qualified engineers and management graduates from reputed institutes in the country. They are well-versed in industrial boiler technologies, plant operations, Supply Chain Management and Information Technology. The promoters also have sound background in agriculture and belong to the locale of Vidharbha, Marathwada and Andhra Pradesh. They have experience in managing large teams in excess of 100 people on projects worth multi-million dollars. The promoters are driven by single objective of making use of renewable sources of energy to help improve the standard of living in the rural areas of Marathwada, and support the government initiatives to bridge the massive gap in energy requirements using these energy sources.
