--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
           color: white;
         }
        
-input{
+.col-sm-6 > input{
   margin-bottom: 26px;
   width:100%;
 }
@@ -38,7 +38,7 @@ input{
    </head>
    <body >
       <header >
-       <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="259">
+      <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="0">
           <div class="container-fluid">
              <div class="navbar-header">
                <button type="button" class="navbar-toggle " data-toggle="collapse" data-target="#myNavbar">
@@ -51,7 +51,7 @@ input{
              <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav">
                   <li ><a href="index.html">Home</a></li>
-                    <li ><a href="theme.html">Theme</a></li>
+                    <li><a href="theme.html">Theme</a></li>
                     <li  class="active"><a href="contact.html">CONTACT US</a></li>
                     <li><a href="legend.html">THE LEGEND OF SEABISCUIT</a></li>
                  </ul>
@@ -72,6 +72,7 @@ input{
           </div>
       </nav>
       </header>
+          </div>
       <div class="container">
             <div class="row">
       <div class="col-sm-6" style="text-align: center; border : 1px solid green">
