Filter added in different pages
Filter added

--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,12 @@
                <div class="form-group">
                  <input type="text" class="form-control" placeholder="Search">
                 </div>
+                <select style="height: 32px; color: black">
+  <option value="A" >A</option>
+  <option value="B" style="color: black">B</option>
+  <option value="C" style="color: black">C</option>
+  <option value="D" style="color: black">D</option>
+</select>
                <button type="submit" class="btn btn-default">Submit</button>
                </form>
                 
