--- a/legend.html
+++ b/legend.html
@@ -15,8 +15,8 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
        <style type="text/css">
 
-        h4{
-          font-family:lato;
+        h3{
+          font-family:roboto;
         }
         body{
           background-color: #fed16a
@@ -61,7 +61,12 @@
               <form class="nav navbar-form navbar-right" style="display:inline;">
                <div class="form-group">
                  <input type="text" class="form-control" placeholder="Search">
-                </div>
+                </div><select style="height: 32px; width: auto; margin-left:4px;">
+  <option value="A">A</option>
+  <option value="B">B</option>
+  <option value="C">C</option>
+  <option value="D">D</option>
+</select>
                <button type="submit" class="btn btn-default">Submit</button>
                </form>
                 
