--- a/login.html
+++ b/login.html
@@ -25,6 +25,8 @@
     		width: 90%;
     		margin: 20px;
     		min-height: 50px;
+        border-radius: 30px;
+        border-color: grey;
     	}
     	
     	body{
@@ -35,7 +37,12 @@
     	}
     	.navbar{
     		max-height: 76px;
+        margin-bottom: 0px;
     	}
+      .row{
+        padding-top: 0px;
+        margin-top: 0px;
+      }
 
     </style>
    
@@ -78,7 +85,7 @@
 <div id="wowslider-container1">
 <div class="ws_images"><ul>
     <li><img src="data1/images/b2.jpg" alt="" title="" id="wows1_0"/></li>
-    <li><a href="http://wowslider.com"><img src="data1/images/b3.jpg" alt="wowslideshow" title="" id="wows1_1"/></a></li>
+    <li><img src="data1/images/b3.jpg" alt="wowslideshow" title="" id="wows1_1"/></a></li>
     <li><img src="data1/images/b100.jpg" alt="" title="" id="wows1_2"/></li>
   </ul></div>
   <div class="ws_bullets"><div>
@@ -94,8 +101,8 @@
 
         <div class="col-sm-6" style="margin-top: 15%">
 
-        <input type="text" name="fmail" placeholder="enter mail"><br>
-        <input type="text" name="fpwd" placeholder="enter password">
+        <input type="text" name="fmail" placeholder="Enter Mail"><br>
+        <input type="text" name="fpwd" placeholder="Enter Password">
         </div>
       </div>
     </div>
