--- a/signup.html
+++ b/signup.html
@@ -25,6 +25,8 @@
     		width: 90%;
     		margin: 20px;
     		min-height: 50px;
+        border-radius: 20px;
+        border-color: grey;
     	}
     	
     	body{
