--- a/theme.html
+++ b/theme.html
@@ -53,8 +53,15 @@
                  
               <form class="nav navbar-form navbar-right" style="display:inline;">
                <div class="form-group">
+
                  <input type="text" class="form-control" placeholder="Search">
                 </div>
+                <select style="height: 32px; width: auto">
+  <option value="A">A</option>
+  <option value="B">B</option>
+  <option value="C">C</option>
+  <option value="D">D</option>
+</select>
                <button type="submit" class="btn btn-default">Submit</button>
                </form>
                 
